--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@
 /data/Maps/Intersect/intersect.geojson
 /data/Maps/Intersect/Intersect.shp
 /data/Maps/Intersect/Intersect.dbf
-/data/Maps/NewMap/NewMap.gdb/a00000021.gdbtable
-/data/Maps/NewMap/NewMap.gdb/a00000022.gdbtable
+/data/Maps/NewMap/
 /data/Maps/OA/oa.geojson
 /data/convert.csv
 /data/data.json
 /data/pricing.csv
 /data/postcodes.csv
 .DS_Store
+/data/Maps/vmdvec_gpkg_gb/
+key.js
